updated fish model so that it can only be updated, deleted, or created by an admin

--- a/app/views/fish/_form.html.erb
+++ b/app/views/fish/_form.html.erb
@@ -16,10 +16,11 @@
     <%= form.text_field :name, id: :fish_name %>
   </div>
 
-  <div class="field">
+  <!-- <div class="field">
     <%= form.label :user_id %>
     <%= form.text_field :user_id, id: :fish_user_id %>
-  </div>
+  </div> -->
+
 
   <div class="actions">
     <%= form.submit %>
