--- a/app/views/fish/index.html.erb
+++ b/app/views/fish/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Fish</h1>
 
 <table>
@@ -15,7 +13,7 @@
     <% @fish.each do |fish| %>
       <tr>
         <td><%= fish.name %></td>
-        <td><%= fish.user %></td>
+        <td><%= fish.user.email %></td>
         <td><%= link_to 'Show', fish %></td>
         <td><%= link_to 'Edit', edit_fish_path(fish) %></td>
         <td><%= link_to 'Destroy', fish, method: :delete, data: { confirm: 'Are you sure?' } %></td>
