--- a/app/views/fish/show.html.erb
+++ b/app/views/fish/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Name:</strong>
   <%= @fish.name %>
@@ -7,7 +5,7 @@
 
 <p>
   <strong>User:</strong>
-  <%= @fish.user %>
+  <%= @fish.user.email %>
 </p>
 
 <%= link_to 'Edit', edit_fish_path(@fish) %> |
