--- a/app/views/fish/_form.html.erb
+++ b/app/views/fish/_form.html.erb
@@ -11,18 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :name %>
     <%= form.text_field :name, id: :fish_name, class: 'form-control' %>
   </div>
 
-  <!-- <div class="field">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id, id: :fish_user_id %>
-  </div> -->
-
-
-  <div class="actions">
+  <div class="form-group">
     <%= form.submit :Submit, class: 'btn btn-default' %>
   </div>
 <% end %>
