added js plugins for dropdowns and date time picker

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,5 +14,8 @@
  *= require_self
  */
  // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
- @import "bootstrap-sprockets";
- @import "bootstrap";
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+@import 'select2';
+@import 'select2-bootstrap';
+@import 'bootstrap-datetimepicker';
