--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,14 @@
 @import 'select2';
 @import 'select2-bootstrap';
 @import 'bootstrap-datetimepicker';
+
+.map-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 60%;
+}
+.map-inner {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
