--- a/app/views/catches/index.html.erb
+++ b/app/views/catches/index.html.erb
@@ -1,32 +1,38 @@
 <h1>Catches</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Length</th>
-      <th>Time</th>
-      <th>Notes</th>
-      <th>User</th>
-      <th>Fish</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @catches.each do |catch| %>
+<div class="table-responsive">
+  <table class="table">
+    <thead>
       <tr>
-        <td><%= catch.length %></td>
-        <td><%= catch.time %></td>
-        <td><%= catch.notes %></td>
-        <td><%= catch.user.email %></td>
-        <td><%= catch.fish.name %></td>
-        <td><%= link_to 'Show', catch %></td>
-        <td><%= link_to 'Edit', edit_catch_path(catch) %></td>
-        <td><%= link_to 'Destroy', catch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Length</th>
+        <th>Time</th>
+        <th>Latitude</th>
+        <th>Longitude</th>
+        <th>Notes</th>
+        <th>User</th>
+        <th>Fish</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @catches.each do |catch| %>
+        <tr>
+          <td><%= catch.length %></td>
+          <td><%= catch.time %></td>
+          <td><%= catch.lat %></td>
+          <td><%= catch.lng %></td>
+          <td><%= catch.notes %></td>
+          <td><%= catch.user.email %></td>
+          <td><%= catch.fish.name %></td>
+          <td><%= link_to 'Show', catch %></td>
+          <td><%= link_to 'Edit', edit_catch_path(catch) %></td>
+          <td><%= link_to 'Destroy', catch, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <br>
 
