--- a/app/views/fish/index.html.erb
+++ b/app/views/fish/index.html.erb
@@ -1,28 +1,30 @@
 <h1>Fish</h1>
 
-<table class='table'>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @fish.each do |fish| %>
+<div class="table-responsive">
+  <table class='table'>
+    <thead>
       <tr>
-        <td><%= fish.name %></td>
-        <td><%= fish.user.email %></td>
-        <td><%= link_to 'Show', fish %></td>
-        <% if is_admin %>
-        <td><%= link_to 'Edit', edit_fish_path(fish) %></td>
-        <td><%= link_to 'Destroy', fish, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end%>
+        <th>Name</th>
+        <th>User</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @fish.each do |fish| %>
+        <tr>
+          <td><%= fish.name %></td>
+          <td><%= fish.user.email %></td>
+          <td><%= link_to 'Show', fish %></td>
+          <% if is_admin %>
+          <td><%= link_to 'Edit', edit_fish_path(fish) %></td>
+          <td><%= link_to 'Destroy', fish, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end%>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <br>
 
