--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,6 +7,7 @@
         <th>Time</th>
         <th>User</th>
         <th>Fish</th>
+        <th></th>
       </tr>
     </thead>
 
@@ -17,6 +18,7 @@
           <td><%= catch.time %></td>
           <td><%= catch.user.email %></td>
           <td><%= catch.fish.name %></td>
+          <td><%= link_to 'Show', catch %></td>
         </tr>
       <% end %>
     </tbody>
