added marker clustering to the homepage, added map to catch show page

--- a/app/views/catches/show.html.erb
+++ b/app/views/catches/show.html.erb
@@ -1,3 +1,14 @@
+<script>
+window.CatchTracker = window.CatchTracker || {};
+window.CatchTracker.catchPosition = { lat: <%= @catch.lat  %>, lng: <%= @catch.lng %> };
+</script>
+<p>
+  <div class="map-container">
+    <div class="map-inner" id="showMap">
+    </div>
+  </div>
+</p>
+
 <p>
   <strong>Length:</strong>
   <%= @catch.length %>
